# Devtool_Kit

./: README.md
Taskmgr/: taskmgr  taskmgr.cpp  tasks.txt
apps/Taskmgr/: main.cpp  taskmgr  taskmgr.cpp
apps/passwd_vault/: passwd_vault  passwd_vault.cpp
core/: CMakeLists.txt
